1) Обновлены стили 2) Обновлены возможности работы без авторизации

--- a/VKAnalyzer/Views/Shared/_Layout.cshtml
+++ b/VKAnalyzer/Views/Shared/_Layout.cshtml
@@ -22,9 +22,12 @@
                 @Html.ActionLink("MadMarketing", "Index", "Home", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Когортный анализ", "Index", "Vk")</li>
-                </ul>
+                @if (Request.IsAuthenticated)
+                {
+                    <ul class="nav navbar-nav">
+                        <li>@Html.ActionLink("Когортный анализ", "Index", "Vk")</li>
+                    </ul>
+                }
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
