--- a/VKAnalyzer/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/VKAnalyzer/Views/Account/ExternalLoginConfirmation.cshtml
@@ -13,9 +13,8 @@
     <hr />
     @Html.ValidationSummary(true)
     <p class="text-info">
-        You've successfully authenticated with <strong>@ViewBag.LoginProvider</strong>.
-            Please enter a user name for this site below and click the Register button to finish
-            logging in.
+        Вы успешно авторизировались <strong>@ViewBag.LoginProvider</strong>.
+            Пожалуйста, введите ваш логин для окончания регистрации на сайте.
     </p>
     <div class="form-group">
         @Html.LabelFor(m => m.UserName, new { @class = "col-md-2 control-label" })
