--- a/VKAnalyzer/Views/Shared/_Layout.cshtml
+++ b/VKAnalyzer/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                 {
                     <ul class="nav navbar-nav">
                         <li>@Html.ActionLink("Когортный анализ", "Index", "Vk")</li>
+                        <li>@Html.ActionLink("Список результатов", "ListOfResults", "Vk")</li>
                     </ul>
                 }
                 @Html.Partial("_LoginPartial")
