--- a/VKAnalyzer/Views/Vk/CohortAnalysis.cshtml
+++ b/VKAnalyzer/Views/Vk/CohortAnalysis.cshtml
@@ -3,234 +3,7 @@
     ViewBag.Title = "Когортный анализ";
 }
 
-<h2>@ViewBag.Title: абсолютные значения</h2>
-<div>
-    <table class="table table-responsive table-bordered">
-        <thead class="thead-default">
-            <tr>
-                <th></th>
-                @foreach (var date in Model.Dates)
-                {
-                    <th>
-                        @date
-                    </th>
-                }
-                <th>
-                    Итого:
-                </th>
-            </tr>
-        </thead>
-        @for (var r = 0; r < Model.TableLength; r++)
-        {
-            <tr>
-                <th>
-                    @Model.Dates[r]
-                </th>
-                @for (var c = 0; c < Model.TableLength; c++)
-                {
-                    <th>
-                        @if (Model.AbsoluteValues[r, c] != null)
-                        {
-                            @Model.AbsoluteValues[r, c].Count()
-                        }
-                    </th>
-                }
-                <th>
-                    @Model.TotalHorizontal[r]
-                </th>
-            </tr>
-        }
-        <tr>
-            <th>
-                Итого:
-            </th>
-            @foreach (var verticalSum in Model.TotalVertical)
-            {
-                <th>
-                    @verticalSum
-                </th>
-            }
-        </tr>
-        <tr>
-            <th>
-                Новые:
-            </th>
-            @for (var c = 0; c < Model.TableLength; c++)
-            {
-                <th class="success">
-                    @if (Model.AbsoluteValues[c, c] != null)
-                    {
-                        @Model.AbsoluteValues[c, c].Count()
-                    }
-                </th>
-            }
-        </tr>
-        <tr>
-            <th>
-                Старые:
-            </th>
-            @for (var c = 0; c < Model.TableLength; c++)
-            {
-                <th class="info">
-                    @if (Model.AbsoluteValues[c, c] != null)
-                    {
-                        @(Model.TotalVertical[c] - Model.AbsoluteValues[c, c].Count())
-                    }
-                </th>
-            }
-        </tr>
-    </table>
-</div>
-
-<h2>@ViewBag.Title: абсолютные значения со сдвигом</h2>
-<div>
-    <table class="table table-responsive table-bordered">
-        <thead class="thead-default">
-            <tr>
-                <th></th>
-                @for (var r = 1; r <= Model.TableLength; r++)
-                {
-                    <th>
-                        @r
-                    </th>
-                }
-                <th>
-                    Итого:
-                </th>
-            </tr>
-        </thead>
-        @for (var r = 0; r < Model.TableLength; r++)
-        {
-            <tr>
-                <th>
-                    @Model.Dates[r]
-                </th>
-                @for (var c = 0; c < Model.TableLength; c++)
-                {
-                    <th>
-                        @if (Model.AbsoluteValues[r, c] != null)
-                        {
-                            @Model.AbsoluteValues[r, c].Count()
-                        }
-                    </th>
-                }
-                <th>
-                    @Model.TotalHorizontal[r]
-                </th>
-            </tr>
-        }
-        <tr>
-            <th>
-                Итого:
-            </th>
-            @foreach (var verticalSum in Model.TotalVertical)
-            {
-                <th>
-                    @verticalSum
-                </th>
-            }
-        </tr>
-        <tr>
-            <th>
-                Новые:
-            </th>
-            @for (var c = 0; c < Model.TableLength; c++)
-            {
-                <th class="success">
-                    @if (Model.AbsoluteValues[c, c] != null)
-                    {
-                        @Model.AbsoluteValues[c, c].Count()
-                    }
-                </th>
-            }
-        </tr>
-        <tr>
-            <th>
-                Старые:
-            </th>
-            @for (var c = 0; c < Model.TableLength; c++)
-            {
-                <th class="info">
-                    @if (Model.AbsoluteValues[c, c] != null)
-                    {
-                        @(Model.TotalVertical[c] - Model.AbsoluteValues[c, c].Count())
-                    }
-                </th>
-            }
-        </tr>
-    </table>
-</div>
-
-<h2>Когортный анализ: относительные значения</h2>
-<div>
-    <table class="table table-responsive table-bordered">
-        <thead class="thead-default">
-            <tr>
-                <th></th>
-                @foreach (var date in Model.Dates)
-                {
-                    <th>
-                        @date
-                    </th>
-                }
-                <th>
-                    Итого:
-                </th>
-            </tr>
-        </thead>
-        @for (var r = 0; r < Model.TableLength; r++)
-        {
-            <tr>
-                <th>
-                    @Model.Dates[r]
-                </th>
-                @for (var c = 0; c < Model.TableLength; c++)
-                {
-                    <th>
-                        @if (!string.IsNullOrEmpty(Model.RelativeValues[r, c]))
-                        {
-                            @Model.RelativeValues[r, c]
-                        }
-                    </th>
-                }
-                <th>
-                    @Model.TotalHorizontal[r]
-                </th>
-            </tr>
-        }
-    </table>
-</div>
-
-<h2>Когортный анализ: относительные значения со сдвигом</h2>
-<div>
-    <table class="table table-responsive table-bordered">
-        <thead class="thead-default">
-            <tr>
-                <th></th>
-                @for (var r = 1; r <= Model.TableLength; r++)
-                {
-                    <th>
-                        @r
-                    </th>
-                }
-            </tr>
-        </thead>
-        @for (var r = 0; r < Model.TableLength; r++)
-        {
-            <tr>
-                <th>
-                    @Model.Dates[r]
-                </th>
-                @for (var c = 0; c < Model.TableLength; c++)
-                {
-                    <th>
-                        @if (!string.IsNullOrEmpty(Model.RelativeValuesWithShift[r, c]))
-                        {
-                            @Model.RelativeValuesWithShift[r, c]
-                        }
-                    </th>
-                }
-            </tr>
-        }
-    </table>
-</div>
+<h2>Ваш запрос отправлен на обработку</h2>
+<p>
+    Вы можете посмотреть результаты своих запросов по @Html.ActionLink("ссылке", "ListOfResults","Vk").
+</p>
