--- a/VKAnalyzer/Views/Vk/Result.cshtml
+++ b/VKAnalyzer/Views/Vk/Result.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>@ViewBag.Title: абсолютные значения</h2>
+<h2>Когортный анализ: абсолютные значения</h2>
 <div>
     <table class="table table-responsive table-bordered">
         <thead class="thead-default">
@@ -13,9 +13,9 @@
                 <th></th>
                 @foreach (var date in Model.Dates)
                 {
-                    <th>
-                        @date
-                    </th>
+                <th>
+                    @date
+                </th>
                 }
                 <th>
                     Итого:
@@ -24,23 +24,23 @@
         </thead>
         @for (var r = 0; r < Model.TableLength; r++)
         {
-            <tr>
-                <th>
-                    @Model.Dates[r]
-                </th>
-                @for (var c = 0; c < Model.TableLength; c++)
+        <tr>
+            <th>
+                @Model.Dates[r]
+            </th>
+            @for (var c = 0; c < Model.TableLength; c++)
                 {
-                    <th>
-                        @if (Model.AbsoluteValues[r, c] != null)
-                        {
-                            @Model.AbsoluteValues[r, c].Count()
-                        }
-                    </th>
-                }
                 <th>
-                    @Model.TotalHorizontal[r]
+                    @if (Model.AbsoluteValues[r, c] != null)
+                        {
+                        @Model.AbsoluteValues[r, c].Count()
+                        }
                 </th>
-            </tr>
+                }
+            <th>
+                @Model.TotalHorizontal[r]
+            </th>
+        </tr>
         }
         <tr>
             <th>
@@ -48,9 +48,9 @@
             </th>
             @foreach (var verticalSum in Model.TotalVertical)
             {
-                <th>
-                    @verticalSum
-                </th>
+            <th>
+                @verticalSum
+            </th>
             }
         </tr>
         <tr>
@@ -59,12 +59,12 @@
             </th>
             @for (var c = 0; c < Model.TableLength; c++)
             {
-                <th class="success">
-                    @if (Model.AbsoluteValues[c, c] != null)
+            <th class="success">
+                @if (Model.AbsoluteValues[c, c] != null)
                     {
-                        @Model.AbsoluteValues[c, c].Count()
+                    @Model.AbsoluteValues[c, c].Count()
                     }
-                </th>
+            </th>
             }
         </tr>
         <tr>
@@ -73,18 +73,18 @@
             </th>
             @for (var c = 0; c < Model.TableLength; c++)
             {
-                <th class="info">
-                    @if (Model.AbsoluteValues[c, c] != null)
+            <th class="info">
+                @if (Model.AbsoluteValues[c, c] != null)
                     {
-                        @(Model.TotalVertical[c] - Model.AbsoluteValues[c, c].Count())
+                    @(Model.TotalVertical[c] - Model.AbsoluteValues[c, c].Count())
                     }
-                </th>
+            </th>
             }
         </tr>
     </table>
 </div>
 
-<h2>@ViewBag.Title: абсолютные значения со сдвигом</h2>
+<h2>Когортный анализ: абсолютные значения со сдвигом</h2>
 <div>
     <table class="table table-responsive table-bordered">
         <thead class="thead-default">
@@ -92,9 +92,9 @@
                 <th></th>
                 @for (var r = 1; r <= Model.TableLength; r++)
                 {
-                    <th>
-                        @r
-                    </th>
+                <th>
+                    @r
+                </th>
                 }
                 <th>
                     Итого:
@@ -103,23 +103,23 @@
         </thead>
         @for (var r = 0; r < Model.TableLength; r++)
         {
-            <tr>
-                <th>
-                    @Model.Dates[r]
-                </th>
-                @for (var c = 0; c < Model.TableLength; c++)
+        <tr>
+            <th>
+                @Model.Dates[r]
+            </th>
+            @for (var c = 0; c < Model.TableLength; c++)
                 {
-                    <th>
-                        @if (Model.AbsoluteValues[r, c] != null)
-                        {
-                            @Model.AbsoluteValues[r, c].Count()
-                        }
-                    </th>
-                }
                 <th>
-                    @Model.TotalHorizontal[r]
+                    @if (Model.AbsoluteValues[r, c] != null)
+                        {
+                        @Model.AbsoluteValues[r, c].Count()
+                        }
                 </th>
-            </tr>
+                }
+            <th>
+                @Model.TotalHorizontal[r]
+            </th>
+        </tr>
         }
         <tr>
             <th>
@@ -127,9 +127,9 @@
             </th>
             @foreach (var verticalSum in Model.TotalVertical)
             {
-                <th>
-                    @verticalSum
-                </th>
+            <th>
+                @verticalSum
+            </th>
             }
         </tr>
         <tr>
@@ -138,12 +138,12 @@
             </th>
             @for (var c = 0; c < Model.TableLength; c++)
             {
-                <th class="success">
-                    @if (Model.AbsoluteValues[c, c] != null)
+            <th class="success">
+                @if (Model.AbsoluteValues[c, c] != null)
                     {
-                        @Model.AbsoluteValues[c, c].Count()
+                    @Model.AbsoluteValues[c, c].Count()
                     }
-                </th>
+            </th>
             }
         </tr>
         <tr>
@@ -152,12 +152,12 @@
             </th>
             @for (var c = 0; c < Model.TableLength; c++)
             {
-                <th class="info">
-                    @if (Model.AbsoluteValues[c, c] != null)
+            <th class="info">
+                @if (Model.AbsoluteValues[c, c] != null)
                     {
-                        @(Model.TotalVertical[c] - Model.AbsoluteValues[c, c].Count())
+                    @(Model.TotalVertical[c] - Model.AbsoluteValues[c, c].Count())
                     }
-                </th>
+            </th>
             }
         </tr>
     </table>
@@ -171,9 +171,9 @@
                 <th></th>
                 @foreach (var date in Model.Dates)
                 {
-                    <th>
-                        @date
-                    </th>
+                <th>
+                    @date
+                </th>
                 }
                 <th>
                     Итого:
@@ -182,28 +182,28 @@
         </thead>
         @for (var r = 0; r < Model.TableLength; r++)
         {
-            <tr>
-                <th>
-                    @Model.Dates[r]
-                </th>
-                @for (var c = 0; c < Model.TableLength; c++)
+        <tr>
+            <th>
+                @Model.Dates[r]
+            </th>
+            @for (var c = 0; c < Model.TableLength; c++)
                 {
-                    <th>
-                        @if (!string.IsNullOrEmpty(Model.RelativeValues[r, c]))
-                        {
-                            @Model.RelativeValues[r, c]
-                        }
-                    </th>
-                }
                 <th>
-                    @Model.TotalHorizontal[r]
+                    @if (!string.IsNullOrEmpty(Model.RelativeValues[r, c]))
+                        {
+                        @Model.RelativeValues[r, c]
+                        }
                 </th>
-            </tr>
+                }
+            <th>
+                @Model.TotalHorizontal[r]
+            </th>
+        </tr>
         }
     </table>
 </div>
 
-<h2>Когортный анализ: относительные значения со сдвигом</h2>
+<h2>Когортный анализ: Относительные значения со сдвигом</h2>
 <div>
     <table class="table table-responsive table-bordered">
         <thead class="thead-default">
@@ -211,29 +211,66 @@
                 <th></th>
                 @for (var r = 1; r <= Model.TableLength; r++)
                 {
-                    <th>
-                        @r
-                    </th>
+                <th>
+                    @r
+                </th>
                 }
             </tr>
         </thead>
         @for (var r = 0; r < Model.TableLength; r++)
         {
-            <tr>
-                <th>
-                    @Model.Dates[r]
-                </th>
-                @for (var c = 0; c < Model.TableLength; c++)
+        <tr>
+            <th>
+                @Model.Dates[r]
+            </th>
+            @for (var c = 0; c < Model.TableLength; c++)
                 {
-                    <th>
-                        @if (!string.IsNullOrEmpty(Model.RelativeValuesWithShift[r, c]))
+                <th>
+                    @if (!string.IsNullOrEmpty(Model.RelativeValuesWithShift[r, c]))
                         {
-                            @Model.RelativeValuesWithShift[r, c]
+                        @Model.RelativeValuesWithShift[r, c]
                         }
-                    </th>
+                </th>
                 }
-            </tr>
+        </tr>
         }
     </table>
 </div>
+
+@if (Model.MediumValuesWithShift != null)
+{
+    <h2>Когортный анализ: Средние значения со сдвигом</h2>
+    <div>
+        <table class="table table-responsive table-bordered">
+            <thead class="thead-default">
+                <tr>
+                    <th></th>
+                    @for (var r = 1; r <= Model.TableLength; r++)
+                    {
+                        <th>
+                            @r
+                        </th>
+                    }
+                </tr>
+            </thead>
+            @for (var r = 0; r < Model.TableLength; r++)
+            {
+                <tr>
+                    <th>
+                        @Model.Dates[r]
+                    </th>
+                    @for (var c = 0; c < Model.TableLength; c++)
+                    {
+                        <th>
+                            @if (!string.IsNullOrEmpty(Model.MediumValuesWithShift[r, c]))
+                            {
+                                @Model.MediumValuesWithShift[r, c]
+                            }
+                        </th>
+                    }
+                </tr>
+            }
+        </table>
+    </div>
+}
 
